--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,8 @@ edition = "2018"
 glob = "*"
 thiserror = "*"
 xunit-repo-interface = { git = "https://github.com/osynge/xunit-repo-interface.git", branch = "main" }
+reqwest = { version = "0.10", features = ["blocking", "json"] }
+fern = "*"
+log = "*"
+clap = "2"
+chrono = "*"
