--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "xunit-repo-client"
 version = "0.1.0"
 authors = ["Owen Synge <osynge@googlemail.com>"]
 edition = "2021"
+rust-version = "1.56"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
