--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ converge = "*"
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 fern = "*"
 log = "0.4"
-clap = "2"
+clap = { version = "4",  features = ["cargo"]}
 chrono = "*"
 toml = "*"
 serde = "*"
